画面設定の記入

--- a/input_complement/settings/settings.ini
+++ b/input_complement/settings/settings.ini
@@ -1,3 +1,36 @@
+;--------------------------------------------------------
+; 【概要】
+; カーソル移動時のポジション設定
+; 【設定方法】
+; Windows Spy等で画面の位置情報を確認する
+;--------------------------------------------------------
+[QuickMoveCursor]
+LeftUpLocX = -600
+LeftUpLocY = 700
+LeftDownLocX = -600
+LeftDownLocY = 1100
+
+CenterLeftLocX = 600
+CenterLeftLocY = 450
+CenterRightLocX = 1350
+CenterRightLocY = 450
+
+RightLeftLocX = 2400
+RightLeftLocY = 500
+RightRightLocX = 3200
+RightRightLocY = 500
+
+;--------------------------------------------------------
+; 【概要】
+; ウィンドウクラス名
+;
+; 【設定方法】
+; Window SpyでWindow Title & Classの
+; ahk_classに表示される値を設定する
+;
+; 【用途】
+; アクティブウィンドウの判別に使用
+;--------------------------------------------------------
 [WindowClassName]
 intellij = SunAwtFrame
 console = ConsoleWindowClass
