Jetbrain IDEのためにLAlt <-> RAlt

--- a/input_complement/settings/settings.ini
+++ b/input_complement/settings/settings.ini
@@ -42,6 +42,7 @@ vscode = Chrome_WidgetWin_1
 tablacus = TablacusExplorer
 
 [ProcessName]
+intellij =  idea64.exe
 dynalist = Dynalist.exe
 chrome = chrome.exe
 firefox = firefox.exe
