--- a/settings/settings.ini
+++ b/settings/settings.ini
@@ -54,3 +54,29 @@ vscode = code.exe
 obsidian = Obsidian.exe
 terminal = Terminal.exe
 tablacus = TE64.exe
+
+;--------------------------------------------------------
+; 【概要】
+;
+; 【設定方法】
+; モードラベルを表示したいx座標/y座標を設定する
+;--------------------------------------------------------
+[ModeLabel]
+; 中央(の右上)
+X1 = 355
+Y1 = 
+; 中央(の左上)
+X2 = 50
+Y2 = 50
+; 左上
+X3 = -250
+Y3 = 1100
+; 左下
+X4 = -250
+Y4 = 2150
+; 右上
+X5 = 4200
+Y5 = 630
+; 右下
+X6 = 4200
+Y6 = 1530
