設定ファイルの変更

--- a/settings/settings.ini
+++ b/settings/settings.ini
@@ -51,6 +51,7 @@ slack = slack.exe
 terminal = WindowsTerminal.exe
 vcxsrv = vcxsrv.exe
 vscode = code.exe
+vrchat = VRChat.exe
 obsidian = Obsidian.exe
 terminal = Terminal.exe
 tablacus = TE64.exe
